--- a/src/components/tooltip/tooltip.css
+++ b/src/components/tooltip/tooltip.css
@@ -1,7 +1,5 @@
 .tooltip {
     position: absolute;
-    top: 0;
-    right: 0;
     background: rgba(255, 255, 255, 0.9);
     color: #000;
     font-size: 12px;
